Fix Dark Mode & Travis

--- a/interface/themes/colors/utilities/default_variables.scss
+++ b/interface/themes/colors/utilities/default_variables.scss
@@ -93,7 +93,7 @@ $close-color: $black;
 $close-text-shadow: 0 1 0 $black;
 
 $input-padding-y: 0;
-$input-padding-x: .375rem;
+$input-padding-x: 0.375rem;
 $input-height-inner: 1.5rem;
 
 // Enables responsive text for Bootstrap
