--- a/interface/themes/oe-styles/style_dark.scss
+++ b/interface/themes/oe-styles/style_dark.scss
@@ -88,6 +88,7 @@ $font-family-base: $font-family-sans-serif;
 $btn-link-disabled-color: $gray-400;
 $close-color: $black;
 $close-text-shadow: 0 1 0 $black;
+$login-text-color: #000;
 
 // Enables responsive text for Bootstrap
 $enable-responsive-font-sizes: true;
